--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,27 @@ body {
   font-family: "Manrope", sans-serif;
   background: #f8f7f3;
 }
+#scrollbar1::-webkit-scrollbar {
+  height: 12px;
+  cursor: pointer;
+}
 
+#scrollbar1::-webkit-scrollbar-track {
+  border-radius: 8px;
+  cursor: pointer;
+
+  background-color: #e7e7e7;
+  border: 1px solid #cacaca;
+}
+
+#scrollbar1::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  cursor: pointer;
+
+  border: 3px solid transparent;
+  background-clip: content-box;
+  background-color: #088269;
+}
 .container {
   max-width: 1960px;
   margin: 0 auto;
